Add GET /pfp/portfolios/classes endpoint to fetch goal types
