# src/routes/portfolioRoutes.js
@@ -3,6 +3,7 @@ const router = express.Router();
 const portfolioController = require('../controllers/portfolioController');
 
 router.get('/', portfolioController.getAll);
+router.get('/classes', portfolioController.getClasses);
 router.get('/:id', portfolioController.getById);
 router.post('/', portfolioController.create);
 router.put('/:id', portfolioController.update);
